--- a/Gitpilot/Components/LoadingOra.razor.css
+++ b/Gitpilot/Components/LoadingOra.razor.css
@@ -2,7 +2,7 @@
     position: absolute;
     width: 100%;
     height: 100px;
-    top -50px;
+    top: -50px;
     pointer-events: none;
     display: flex;
     flex-direction: column;
