--- a/Gitpilot/Components/GitGraph.razor.css
+++ b/Gitpilot/Components/GitGraph.razor.css
@@ -46,11 +46,9 @@
 .commit-time-line-body-branch {
     max-width: 170px;
     background-color: gray;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
+    
     padding-left: 5px;
-    padding-right: 0px;
+    padding-right: 3px;
     font-size: 12px;
     height: 22px;
     display: flex;
@@ -58,6 +56,12 @@
     border-radius: 3px;
     width: min-content;
 }
-.commit-time-line-body-graph{
+.commit-time-line-body-branch-name {
+    display:block;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+.commit-time-line-body-graph {
     padding: 0px;
 }
